Remove "contact X before working on Y" statements.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -33,6 +33,9 @@ It may help to understand the higher-level <code>tree</code> structure as
 well.  Unfortunately, for this we only have an <a
 href="http://gcc.gnu.org/onlinedocs/gccint/Trees.html">incomplete, C/C++ specific manual</a>.</p>
 
+<p>Remember to <a href="../contributewhy.html">keep other developers
+informed</a> of any substantial projects you intend to work on.</p>
+
 <h2>Bug patrol</h2>
 
 <p>These projects all have to do with bugs in the compiler, and our
@@ -683,10 +686,7 @@ it were done for all existing targets.  The basic idea is that</p>
 </pre>
 
 <p>Unfortunately, the technique is very poorly documented and may need
-extending to other conditional operations (setcc, movcc) as well.
-Contact Bernd
-Schmidt &lt;<a href="mailto:bernds@redhat.com">bernds@redhat.com</a>&gt;
-before beginning any work on this.</p>
+extending to other conditional operations (setcc, movcc) as well.</p>
 </li>
 
 <li>Find hooks in the machine-independent code which aren't used by
@@ -902,11 +902,7 @@ href="http://gcc.gnu.org/onlinedocs/gccint/Trees.html">C/C++ specific manual</a>
 <a href="http://www.ncsa.uiuc.edu/~wendling/tree.html">third party,
 general manual</a>.  Both of them are incomplete.  Several people have
 written partial manuals on implementing new front ends: look at our
-<a href="../readings.html">readings list</a>.</p>
-
-<p>Michael Dupont &lt;<a
-href="mailto:mdupont777@yahoo.com">mdupont777@yahoo.com</a>&gt;
-is working on this, so contact him first.</p></li>
+<a href="../readings.html">readings list</a>.</p></li>
 
 <li>Roll information in external documents into the official manual.
 
