--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -78,6 +78,9 @@ exclusive.</a></li>
 
 <h1>GCC Projects</h1>
 
+<p>Remember to <a href="../contributewhy.html">keep other developers
+informed</a> of any substantial projects you intend to work on.</p>
+
 <h2><a name="fix_bugs_in_bts">Fix bugs in our bug tracking system</a></h2>
 <p>You can investigate bugs in our <a href="http://gcc.gnu.org/bugzilla/">bug
 tracking system</a> and attempt to fix them or see whether they still are
@@ -142,9 +145,7 @@ features.  An <a href="../c99status.html">overview</a> of the C99
 implementation status is available.</p>
 
 <h2><a name="improve_the_haifa_scheduler">Improve the Haifa scheduler</a></h2> (haifa-sched.c, loop.[ch],
-unroll.c, genattrtab.c): (contact <a
-href="mailto:law@redhat.com">law@redhat.com</a> before starting any
-serious haifa work)
+unroll.c, genattrtab.c):
 
 <ul>
   <li>Fix/add comments throughout the code.  Many of the comments are
@@ -187,9 +188,6 @@ subcases of load/store motion).</p>
 
 <p>It can probably also be used to improve the reg-stack pass of the
 compiler.</p>
-
-<p>Contact <a href="mailto:law@redhat.com">law@redhat.com</a> if
-you're interested in working on lazy code motion.</p>
 
 <h2><a name="miscellaneous_ideas">Miscellaneous ideas:</a></h2>
 
@@ -303,9 +301,6 @@ matched is constant and of length not greater than three.</p>
 <h2><a name="format_checking">Format (<code>printf</code>, <code>scanf</code> and
 <code>strftime</code>) checking:</a></h2>
 
-<p>Contact <a href="mailto:jsm28@cam.ac.uk">jsm28@cam.ac.uk</a> before
-doing any substantial format checking work.</p>
-
 <ul>
 
 <li>Make re-entrant: eliminate global state used for <code>$</code>
@@ -393,9 +388,6 @@ href="http://gcc.gnu.org/ml/gcc-bugs/2001-12/msg00651.html">here</a>.
 </ul>
 
 <h2><a name="improve_the_installation_procedure">Improve the installation procedure</a></h2>
-
-<p>Contact <a href="mailto:zackw@stanford.edu">zackw@stanford.edu</a>
-before working on improvements to installation.</p>
 
 <ul>
 
@@ -590,10 +582,7 @@ allocate a variable a hard register for just part of a function; for
 example, through a particular loop where the variable is mostly used,
 or outside of a particular loop where the variable is not used.  (The
 latter is nice because it might let the variable be in a register most
-of the time even though the loop needs all the registers.)
-
-Contact <a href="mailto:meissner@redhat.com">meissner@redhat.com</a>
-before starting any work on live range splitting.</p>
+of the time even though the loop needs all the registers.)</p>
 
 <h3><a name="detect_dead_stores_into_memory">Detect dead stores into memory?</a></h3>
 
@@ -603,9 +592,7 @@ that might be that location (including no reference to a variable
 address).</p>
 
 <p>This can be modeled as a partial redundancy elimination/lazy code
-motion problem.  Contact <a
-href="mailto:law@redhat.com">law@redhat.com</a> before working on dead
-store elimination optimizations.</p>
+motion problem.</p>
 
 <h3><a name="loop_optimization">Loop optimization</a></h3>
 
@@ -668,9 +655,6 @@ order in which to generate code for subexpressions of an expression.</p>
 <h3><a name="more_code_motion">More code motion</a></h3>
 
 <p>Consider hoisting common code up past conditional branches or tablejumps.</p>
-
-<p>Contact <a href="mailto:law@redhat.com">law@redhat.com</a> before
-working on code hoisting.</p>
 
 <h3><a name="trace_scheduling">Trace scheduling</a></h3>
 
