Add missing </li>.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -1123,7 +1123,7 @@ presuming anything about its semantics within the compiler.  All this
 special handing should be disabled by <samp>-ffreestanding</samp>.
 Where the function is defined by ISO C (and possibly where it has a
 name reserved by ISO C), it should be declared as a built-in function
-with the attribute in <code>builtins.def</code>.</p>
+with the attribute in <code>builtins.def</code>.</p></li>
 
 <li>Find warnings that only the C front end does that would make sense
 with C++ and have the C++ front end support them as well, sharing code
