Whoops, parse error.

--- a/htdocs/projects/tree-profiling.html
+++ b/htdocs/projects/tree-profiling.html
@@ -130,7 +130,7 @@ with the control flow graph, which is also not built until after inlining.
 So a new inliner is needed that can inline function control flow graphs
 instead of functions as trees.  The compiler will have to construct and
 maintain a CFG for every function, instead of only for the function that
-is currently being compiled.<p>
+is currently being compiled.</p>
 
 <h3>Status on the branch</h3>
 
