iq2000 now also has a DFA pipeline description

--- a/htdocs/backends.html
+++ b/htdocs/backends.html
@@ -80,7 +80,7 @@ i386     |   ? Q        q  p    dha
 i860     |  M?            cpf       e 
 ia64     |   ? Q   C    qr p    d a   
 ip2k     | ???L  FI    l  c f mb      
-iq2000   | ???   FICB      p g   h t  
+iq2000   | ???   FICB      p g  d  t  
 m32r     |       FI             d    s
 m68hc11  |    L  FI    l  c        t s
 m68k     |   ?            c f     a   
