--- a/htdocs/backends.html
+++ b/htdocs/backends.html
@@ -84,7 +84,7 @@ iq2000   | ???   FICB      p g  d  t
 m32r     |       FI             d    s
 m68hc11  |    L  FI    l  c        t s
 m68k     |   ?            c f     a   
-mcore    |  ?    FI          gm  h   s
+mcore    |  ?    FI          gm d    s
 mips     |     Q   CB   qr     bdh   s
 mmix     | HM  Q   C    q  p   b  a e 
 mn10300  | ??             c  g       s
