Fix "SUSE LINUX Enterprise Server 9" as requested by Gerald

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -692,7 +692,7 @@ NOTE: the submitter reported that thread support is broken and asked
 
 <tr>
 <td>ia64-suse-linux-gnu</td>
-<td>SuSE Linux ES 9, binutils 2.15.90, glibc 2.3.3, kernel 2.6.5</td>
+<td>SUSE LINUX Enterprise Server 9, binutils 2.15.90, glibc 2.3.3, kernel 2.6.5</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00201.html">3.3.4</a>
 <br />Test results:
