--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -215,6 +215,12 @@ particular releases or snapshots or the latest snapshot.  </p>
   be marked with the tag <code>[csl-hpux-branch]</code> in the subject
   line.</dd>
 
+  <dt>csl-sol210-branch</dt>
+  <dd>CodeSourcery branch for developing Solaris 2.10 AMD64 support.
+  This branch is maintained by CodeSourcery personnel.  Patches should
+  be marked with the tag <code>[csl-sol210-branch]</code> in the
+  subject line.</dd>
+
   <dt>hammer-3_3-branch</dt>
   <dd>The goal of this branch is to have a stable compiler based on GCC 3.3
   with improved performance for AMD's 64-bit Hammer CPUs. The branch is
