Update ftp.fu-berlin.de URL (to reference their gcc.gnu.org mirror, not their ftp.gnu.org one).

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -28,7 +28,7 @@ sites</a>.</p>
 <li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/gcc.gnu.org/gcc/">ftp.irisa.fr</a>, thanks to ftpmaint at irisa dot fr</li>
 <li>France (Versailles): <a href="ftp://ftp.uvsq.fr/pub/gcc/">ftp.uvsq.fr</a>, thanks to ftpmaint at uvsq dot fr</li>
 <li>France: <a href="ftp://ftp.club-internet.fr/pub/gcc/">ftp.club-internet.fr</a>, thanks to ftpmaster at t-online dot fr</li>
-<li>Germany (Berlin): <a href="ftp://ftp.fu-berlin.de/unix/gnu/gcc/">ftp.fu-berlin.de</a>, thanks to Felix von Leitner (leitner at math dot fu-berlin dot de)</li>
+<li>Germany (Berlin): <a href="ftp://ftp.fu-berlin.de/unix/languages/gcc/">ftp.fu-berlin.de</a>, thanks to Felix von Leitner (leitner at math dot fu-berlin dot de)</li>
 <li>Germany: <a href="ftp://ftp.gwdg.de/pub/misc/gcc/">ftp.gwdg.de</a>, thanks to emoenke at gwdg dot de</li>
 <li>Germany: <a href="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/gcc.gnu.org/pub/gcc/">ftp.mpi-sb.mpg.de</a>, thanks to ftpadmin at mpi-sb.mpg dot de</li>
 <li>Greece: <a href="ftp://ftp.ntua.gr/pub/gnu/gcc/">ftp.ntua.gr</a>, thanks to ftpadm at ntua dot gr</li>
