--- a/htdocs/benchmarks/index.html
+++ b/htdocs/benchmarks/index.html
@@ -48,7 +48,7 @@ href="http://www.suse.de/~aj/SPEC/">http://www.suse.de/~aj/SPEC/</a>.
 
 <p>
 Statistics about GCC code size for several targets are available from the
-<a href="http://sed.inf.u-szeged.hu/csibe/">GCC Code-Size Benchmark
+<a href="http://www.inf.u-szeged.hu/csibe/">GCC Code-Size Benchmark
 Environment (CSiBE)</a>, along with the testbed and measurement scripts.
 </p>
 
