* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-07-07.
+2004-07-09.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -131,6 +131,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.text.DateFormat</td> <td class="needsmerge"><a href="compare/java.text.DateFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.DateFormatSymbols</td> <td class="needsmerge"><a href="compare/java.text.DateFormatSymbols.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.DecimalFormatSymbols</td> <td class="needsmerge"><a href="compare/java.text.DecimalFormatSymbols.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.text.MessageFormat</td> <td class="needsmerge"><a href="compare/java.text.MessageFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.NumberFormat</td> <td class="needsmerge"><a href="compare/java.text.NumberFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Calendar</td> <td class="needsmerge"><a href="compare/java.util.Calendar.diff">Diff</a></td> </tr>
@@ -172,7 +173,22 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.rmi.CORBA.ValueHandler</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.ORB</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.PortableRemoteObject</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">javax.swing.Box</td> <td class="needsmerge"><a href="compare/javax.swing.Box.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JButton</td> <td class="needsmerge"><a href="compare/javax.swing.JButton.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JCheckBox</td> <td class="needsmerge"><a href="compare/javax.swing.JCheckBox.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JDialog</td> <td class="needsmerge"><a href="compare/javax.swing.JDialog.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JRadioButton</td> <td class="needsmerge"><a href="compare/javax.swing.JRadioButton.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JToggleButton</td> <td class="needsmerge"><a href="compare/javax.swing.JToggleButton.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.UIManager</td> <td class="needsmerge"><a href="compare/javax.swing.UIManager.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.border.TitledBorder</td> <td class="needsmerge"><a href="compare/javax.swing.border.TitledBorder.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicLabelUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicLabelUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicLookAndFeel</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicLookAndFeel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicMenuUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicMenuUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicPopupMenuSeparatorUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicPopupMenuSeparatorUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicProgressBarUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicProgressBarUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicScrollBarUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicScrollBarUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicSeparatorUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicSeparatorUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.JTextComponent</td> <td class="needsmerge"><a href="compare/javax.swing.text.JTextComponent.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.ClassStuff</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilder</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilderFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
