Add "An Introduction to GCC".

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -15,6 +15,9 @@
 
 <ul>
 
+  <li><a href="http://www.network-theory.co.uk/gcc/intro/">An Introduction
+  to GCC</a> by Brian J. Gough.</li>
+ 
   <li><a href="http://home.in.tum.de/~baueran/thesis/">Compilation of Functional Programming
   Languages using GCC -- Tail Calls</a> by Andreas Bauer
   &lt;<a href="mailto:baueran@in.tum.de">baueran@in.tum.de</a>&gt;.</li>
