--- a/htdocs/backends.html
+++ b/htdocs/backends.html
@@ -85,7 +85,7 @@ m32r     |       FI             d    s
 m68hc11  |    L  FI    l  c        t s
 m68k     |   ?            c f     a   
 mcore    |  ?    FI          gm d    s
-mips     |     Q   CB   qr     bdh   s
+mips     |     Q   CB   qr     bd    s
 mmix     | HM  Q   C    q  p   b  a e 
 mn10300  | ??             c  g       s
 ns32k    |  M?            c f m     e 
