* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-07-09.
+2004-07-12.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -19,7 +19,6 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
-<tr> <td class="needsmerge">gnu.java.awt.EmbeddedWindow</td> <td class="needsmerge"><a href="compare/gnu.java.awt.EmbeddedWindow.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.awt.peer.gtk.GThreadMutex</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.java.awt.peer.gtk.GThreadNativeMethodRunner</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkMainThread</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkMainThread.diff">Diff</a></td> </tr>
@@ -39,7 +38,6 @@ differences are currently required.</p>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Connection</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Handler</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.protocol.jar.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.jar.Connection.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.nio.SelectorImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.SelectorImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.channels.FileChannelImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.security.PolicyFile</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.DelegateFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -49,15 +47,15 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.UtilDelegateImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.ValueHandlerImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.PortableServer</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="needsmerge">gnu.regexp.CharIndexedInputStream</td> <td class="needsmerge"><a href="compare/gnu.regexp.CharIndexedInputStream.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.Window</td> <td class="needsmerge"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.event.InvocationEvent</td> <td class="needsmerge"><a href="compare/java.awt.event.InvocationEvent.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.BufferedInputStream</td> <td class="needsmerge"><a href="compare/java.io.BufferedInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.io.DeleteFileHelper</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.InputStreamReader</td> <td class="needsmerge"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectInputStream</td> <td class="needsmerge"><a href="compare/java.io.ObjectInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectOutputStream</td> <td class="needsmerge"><a href="compare/java.io.ObjectOutputStream.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.ObjectStreamClass</td> <td class="needsmerge"><a href="compare/java.io.ObjectStreamClass.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectStreamField</td> <td class="needsmerge"><a href="compare/java.io.ObjectStreamField.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.OutputStreamWriter</td> <td class="needsmerge"><a href="compare/java.io.OutputStreamWriter.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.PrintStream</td> <td class="needsmerge"><a href="compare/java.io.PrintStream.diff">Diff</a></td> </tr>
@@ -87,6 +85,8 @@ differences are currently required.</p>
 <tr> <td class="VM-specific">java.lang.reflect.Field</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">java.lang.reflect.Method</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">java.lang.reflect.Modifier</td> <td class="needsmerge"><a href="compare/java.lang.reflect.Modifier.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.lang.reflect.Proxy</td> <td class="needsmerge"><a href="compare/java.lang.reflect.Proxy.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.net.DatagramPacket</td> <td class="needsmerge"><a href="compare/java.net.DatagramPacket.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.Inet4Address</td> <td class="needsmerge"><a href="compare/java.net.Inet4Address.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.Inet6Address</td> <td class="needsmerge"><a href="compare/java.net.Inet6Address.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.InetAddress</td> <td class="needsmerge"><a href="compare/java.net.InetAddress.diff">Diff</a></td> </tr>
@@ -95,48 +95,16 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.net.URL</td> <td class="needsmerge"><a href="compare/java.net.URL.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLClassLoader</td> <td class="needsmerge"><a href="compare/java.net.URLClassLoader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLConnection</td> <td class="needsmerge"><a href="compare/java.net.URLConnection.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.net.URLStreamHandler</td> <td class="needsmerge"><a href="compare/java.net.URLStreamHandler.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.Buffer</td> <td class="needsmerge"><a href="compare/java.nio.Buffer.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.ByteBuffer</td> <td class="needsmerge"><a href="compare/java.nio.ByteBuffer.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.ByteBufferHelper</td> <td class="needsmerge"><a href="compare/java.nio.ByteBufferHelper.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.ByteBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.ByteBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.CharBuffer</td> <td class="needsmerge"><a href="compare/java.nio.CharBuffer.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.CharBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.CharBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.CharViewBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.CharViewBufferImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.nio.DirectByteBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.DirectByteBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.DoubleBuffer</td> <td class="needsmerge"><a href="compare/java.nio.DoubleBuffer.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.DoubleBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.DoubleBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.DoubleViewBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.DoubleViewBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.FloatBuffer</td> <td class="needsmerge"><a href="compare/java.nio.FloatBuffer.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.FloatBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.FloatBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.FloatViewBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.FloatViewBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.IntBuffer</td> <td class="needsmerge"><a href="compare/java.nio.IntBuffer.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.IntBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.IntBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.IntViewBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.IntViewBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.LongBuffer</td> <td class="needsmerge"><a href="compare/java.nio.LongBuffer.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.LongBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.LongBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.LongViewBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.LongViewBufferImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.nio.MappedByteBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.MappedByteBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.ShortBuffer</td> <td class="needsmerge"><a href="compare/java.nio.ShortBuffer.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.ShortBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.ShortBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.ShortViewBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.ShortViewBufferImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.AccessControlContext</td> <td class="needsmerge"><a href="compare/java.security.AccessControlContext.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.AccessController</td> <td class="needsmerge"><a href="compare/java.security.AccessController.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.BasicPermission</td> <td class="needsmerge"><a href="compare/java.security.BasicPermission.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.security.IntersectingDomainCombiner</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.security.ProtectionDomain</td> <td class="needsmerge"><a href="compare/java.security.ProtectionDomain.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.SecureClassLoader</td> <td class="needsmerge"><a href="compare/java.security.SecureClassLoader.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.text.BreakIterator</td> <td class="needsmerge"><a href="compare/java.text.BreakIterator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.text.DateFormat</td> <td class="needsmerge"><a href="compare/java.text.DateFormat.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.text.DateFormatSymbols</td> <td class="needsmerge"><a href="compare/java.text.DateFormatSymbols.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.text.DecimalFormatSymbols</td> <td class="needsmerge"><a href="compare/java.text.DecimalFormatSymbols.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.text.MessageFormat</td> <td class="needsmerge"><a href="compare/java.text.MessageFormat.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.text.NumberFormat</td> <td class="needsmerge"><a href="compare/java.text.NumberFormat.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Calendar</td> <td class="needsmerge"><a href="compare/java.util.Calendar.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.util.Currency</td> <td class="needsmerge"><a href="compare/java.util.Currency.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.util.GregorianCalendar</td> <td class="needsmerge"><a href="compare/java.util.GregorianCalendar.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.PropertyPermissionCollection</td> <td class="needsmerge"><a href="compare/java.util.PropertyPermissionCollection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
@@ -154,12 +122,6 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">java.util.zip.OutputWindow</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.PendingBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.StreamManipulator</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">javax.imageio.IIOException</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">javax.imageio.event.IIOReadProgressListener</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">javax.imageio.event.IIOReadUpdateListener</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">javax.imageio.event.IIOReadWarningListener</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">javax.imageio.event.IIOWriteProgressListener</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">javax.imageio.event.IIOWriteWarningListener</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.BAD_OPERATION</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.ClassDesc</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.ObjectImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -183,7 +145,6 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.swing.border.TitledBorder</td> <td class="needsmerge"><a href="compare/javax.swing.border.TitledBorder.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicLabelUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicLabelUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicLookAndFeel</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicLookAndFeel.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicMenuUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicMenuUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicPopupMenuSeparatorUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicPopupMenuSeparatorUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicProgressBarUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicProgressBarUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicScrollBarUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicScrollBarUI.diff">Diff</a></td> </tr>
