Fix links to GNUT User's guide for 3.4.1 manual.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -48,11 +48,11 @@
          in PostScript</a> or <a
          href="http://gcc.gnu.org/onlinedocs/gcc-3.4.1/gnat_rm-html.tar.gz">an
          HTML tarball</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.1/gnat_ug_unx/">GCC
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.1/gnat_ugn_unw/">GCC
          3.4.1 GNAT User's Guide</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.1/gnat_ug_unx.ps.gz">also
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.1/gnat_ugn_unw.ps.gz">also
          in PostScript</a> or <a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.1/gnat_ug_unx-html.tar.gz">an
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.4.1/gnat_ugn_unw-html.tar.gz">an
          HTML tarball</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.4.1/fastjar/">GCC
          3.4.1 GNU JAR Manual</a> (<a
