--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-07-14.
+2004-07-15.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -50,6 +50,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.awt.event.InvocationEvent</td> <td class="needsmerge"><a href="compare/java.awt.event.InvocationEvent.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.im.InputContext</td> <td class="needsmerge"><a href="compare/java.awt.im.InputContext.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">java.beans.EventHandler</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">java.io.BufferedInputStream</td> <td class="needsmerge"><a href="compare/java.io.BufferedInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.io.DeleteFileHelper</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
